Migrated to json user profiles file