@@ -17,16 +17,18 @@ ext {
     junitVersion = '5.9.2'
 }
 
-sourceCompatibility = '17'
-targetCompatibility = '17'
+sourceCompatibility = "17"
+targetCompatibility = "17"
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
+    options.compilerArgs.add("--enable-preview")
 }
 
 application {
     mainModule = 'ml.qizd.qizdlauncher'
     mainClass = 'ml.qizd.qizdlauncher.MainApplication'
+    applicationDefaultJvmArgs += ["--enable-preview"]
 }
 
 javafx {
